Don't hotlink spin.min.js

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -35,9 +35,9 @@
         <script src="js/jsoneditor.js"></script>
         <script src="js/jsondiffpatch-full.js"></script>
         <script src="js/jsondiffpatch-formatters.js"></script>
+        <script src="js/spin.min.js"></script>
         <script src="https://unpkg.com/github-api/dist/GitHub.bundle.min.js"></script>
         <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
-        <script src="http://spin.js.org/spin.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script>
             async function main() {
