--- a/views/index.mustache
+++ b/views/index.mustache
@@ -7,26 +7,29 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     </head>
     <body>
-        <div id="spinner_container" style="background-color: rgba(0, 0, 0, 0.3); width:100%; height:100%; position:fixed; top:0px; left:0px; z-index:1000;"></div>
-        <h1>{{ title }}</h1>
+        <div class="container">
+            <div id="spinner_container" style="background-color: rgba(0, 0, 0, 0.3); width:100%; height:100%; position:fixed; top:0px; left:0px; z-index:1000;"></div>
+            <div class="jumbotron text-center">
+                <h1>{{ title }}</h1>
+                <button type="button" class="btn btn-primary" id="authenticate">Authenticate with GitHub</button>
+            </div>
 
-        <button type="button" class="btn btn-primary" id="authenticate">Authenticate with GitHub</button>
+            <div id="editor_holder"></div>
 
-        <div id="editor_holder"></div>
-
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Confirm Changes</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div id="visual-diff"></div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="commit">Save changes</button>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Confirm Changes</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div id="visual-diff"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" id="commit">Save changes</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -101,6 +104,7 @@
 
                 const editorHolder = document.getElementById('editor_holder');
                 const saveButton = document.createElement("button");
+                saveButton.className = "btn btn-primary";
                 saveButton.id = "save";
                 saveButton.appendChild(document.createTextNode("Save"));
                 editorHolder.parentNode.insertBefore(saveButton, editorHolder.nextSibling);
